Fix form field description text alignment

--- a/style/src/component/form.less
+++ b/style/src/component/form.less
@@ -25,4 +25,5 @@
   margin-bottom: @gutter[grid-margin] / 2;
   font-size: 12px;
   font-weight: 100;
+  text-align: left;
 }
